# rust-stackedconfig

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
docs/: search-index.js
docs/implementors/core/fmt/: trait.Debug.js
docs/src/stackedconfig/: lib.rs.html
docs/stackedconfig/: ConfigStack.t.html  enum.Lookup.html  index.html  sidebar-items.js  struct.ConfigStack.html
src/: configstack.rs  gettable.rs  hjson.rs  json.rs  lib.rs  yaml.rs
